# aggregator-sor

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  main_test.py  mock.py  pyproject.toml  settings.py  sor.py
repos/: PolygonPoolRepository.py  __init__.py  redis.py
sor/: __init__.py  algorithm.py  core.py  models.py  preprocess.py  sor.py
test/: 01__test.py  02__test.py  03__test.py  04__test.py  mock.py  utils.py
