[tool.poetry]
name = "aggregator-sor-algo"
version = "0.1.0"
description = ""
authors = ["vutran1710 <me@vutr.io>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.6.0"
pydantic = "^1.9.1"
Faker = "^13.15.1"
pre-commit = "^2.20.0"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
